# web-ui

./: .env.example  .gitignore  BACKEND_IMPROVEMENTS.md  CLAUDE.md  DEBUG_SETTINGS_BUTTON.md  Dockerfile  IMPLEMENTATION-STATUS.md  MCP_FIX_SUMMARY.md  README.md  SESSION_SUMMARY.md  WINDOWS-SETUP.md  diagnose_dropdown_issue.py  mcp.example.json  pyproject.toml  requirements.txt  setup-windows.bat  setup-windows.ps1  test_dashboard.py  test_sequential_thinking.md  webui.py
.claude/: settings.local.json
.claude/planning/: 00-ENHANCEMENT-OVERVIEW.md  01-PHASE1-REALTIME-UX.md  02-PHASE2-VISUAL-WORKFLOW.md  03-PHASE3-OBSERVABILITY.md  04-PHASE4-ARCHITECTURE.md  05-TECHNICAL-SPECS.md  06-DEPLOYMENT-GUIDE.md  07-IMPLEMENTATION-ROADMAP.md  08-QUICK-WINS-FIRST.md  09-DECISION-FRAMEWORK.md  10-TESTING-STRATEGY.md  PLANNING-SUMMARY.md  README.md
data/: .gitkeep  README.md
docs/: BACKEND_IMPROVEMENTS.md  LANGGRAPH_MIGRATION_PLAN.md  WORKFLOW_GRAPH_REVIEW.md
src/web_ui/agent/browser_use/: browser_use_agent.py
src/web_ui/agent/deep_research/: deep_research_agent.py
src/web_ui/browser/: custom_browser.py  custom_context.py
src/web_ui/controller/: custom_controller.py
src/web_ui/events/: __init__.py  event_bus.py
src/web_ui/observability/: __init__.py  cost_calculator.py  trace_models.py  tracer.py
src/web_ui/plugins/: plugin_interface.py
src/web_ui/utils/: config.py  llm_provider.py  mcp_client.py  mcp_config.py  utils.py  workflow_graph.py
src/web_ui/webui/: interface.py  webui_manager.py
src/web_ui/webui/components/: agent_settings_tab.py  browser_settings_tab.py  browser_use_agent_tab.py  chat_formatter.py  dashboard_main.py  dashboard_settings.py  dashboard_sidebar.py  deep_research_agent_tab.py  help_modal.py  load_save_config_tab.py  mcp_settings_tab.py  quick_start_tab.py  workflow_visualizer.py
tests/: test_agents.py  test_controller.py  test_llm_api.py
